# steam-engine

./: Cargo.toml  README.md
backend/steamengine-backend-defaults/: Cargo.toml
backend/steamengine-backend-defaults/src/: lib.rs
backend/steamengine-communication/: Cargo.toml  README.md
backend/steamengine-communication/src/: errors.rs  lib.rs  tokio.rs
backend/steamengine-persistent/: Cargo.toml  README.md
backend/steamengine-persistent/src/: asyncron.rs  errors.rs  lib.rs  redis.rs
backend/steamengine-server/: Cargo.toml
backend/steamengine-server/examples/: client.rs  main.rs
backend/steamengine-server/src/: errors.rs  lib.rs
client/examples/: test.rs  test_server.rs
client/examples/client-example/: Cargo.toml
client/examples/client-example/src/: app.rs  buffers.rs  camera_controler.rs  color.rs  main.rs  pipeline.rs  shader.wgsl
client/steamengine/: Cargo.toml
client/steamengine-renderer/: Cargo.toml
client/steamengine-renderer-util/: Cargo.toml
client/steamengine-renderer-util/src/: bindings.rs  depth_texture.rs  errors.rs  lib.rs  simple_buffer.rs
client/steamengine-renderer-util/src/camera/: mod.rs  orthographic.rs  prespective.rs
client/steamengine-renderer-util/src/resources/: mod.rs  model.rs  texture.rs
client/steamengine-renderer-util/test/: a.txt
client/steamengine-renderer/src/: bind_group.rs  lib.rs  render_pass.rs  render_pipeline.rs  texture.rs
client/steamengine-wgpu-core/: Cargo.toml
client/steamengine-wgpu-core/src/: lib.rs  windows.rs
client/steamengine-wgpu-core/src/render/: mod.rs  render_pass.rs  texture.rs
examples/: renderer.rs  shaders.rs  texture.rs  thread.rs  vertex.rs  window.rs
examples/instance-test/: Cargo.toml
examples/instance-test/src/: app.rs  instances.rs  main.rs  pipeline.rs  shader.wgsl  vertex.rs
examples/triangle-example/: Cargo.toml
examples/triangle-example/src/: app.rs  main.rs  pipeline.rs  shader.wgsl
src/: lib.rs  vertex.rs  windows.rs
src/render/: bind_group.rs  errors.rs  mod.rs  render_pass.rs  texture.rs  vertex.rs
src/render/render_pipeline/: basic.rs  mod.rs
src/threads/: channel.rs  mod.rs
src/windows/: mod.rs
steamengine-core/: Cargo.toml
steamengine-core/src/: lib.rs  windows.rs
steamengine-core/src/render/: bind_group.rs  errors.rs  instances.rs  mod.rs  vertex.rs
steamengine-core/src/render/render_pipeline/: basic.rs  mod.rs
steamengine-core/src/threads/: channel.rs
