[package]
name = "steamengine-communication"
edition = "2024"
version = "1.0.0"
description = "(PCS) Package communication system, part of steamengine"
authors = ["k3nder <k3nder@outlook.es>"]

[dependencies]
rkyv = "0.8.10"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util"], optional = true }
tracing = "0.1.41"

[features]
tokio-comp = ["dep:tokio"]
tokio-tcp = ["tokio-comp", "tokio/net"]
tcp = []
