[package]
name = "steamengine-persistent"
edition = "2024"
version = "1.0.0"
description = "(VKS) VAL-KEY serializer, part of steamengine"
authors = ["k3nder <k3nder@outlook.es>"]

[dependencies]
redis = { version = "0.32.0", optional = true }
rkyv = "0.8.10"
thiserror = "2.0.12"
tracing = "0.1.41"

[features]
default = ["redis-impl", "asyncron"]
redis-impl = ["redis"]
asyncron = ["redis/tokio-comp"]

[dev-dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
tracing-subscriber = "0.3.19"
