[package]
name = "steamengine-server"
version = "1.0.0"
edition = "2024"
authors = ["k3nder <k3nder@outlook.es>"]

[dependencies]
async-trait = "0.1.88"
rayon = "1.10.0"
redis = { version = "0.32.0", features = ["tokio-comp"] }
rkyv = "0.8.10"
steamengine-communication = { version = "1.0.0", path = "../steamengine-communication", features = ["tokio-tcp"] }
steamengine-persistent = { version = "1.0.0", path = "../steamengine-persistent" }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"]}
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
