[package]
name = "steamengine-renderer-util"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["K3nder <k3nde@outlook.es>"]
description = "A lightweight graphic engine"

[dependencies]
bytemuck = "1.23.0"
cgmath = { version = "0.18.0", optional = true }
fs_extra = { version = "1.3.0", optional = true }
hashbrown = { version = "0.15.4", features = ["rayon"], optional = true }
image = { version = "0.25.6", optional = true, default-features = false, features = ["rayon"] }
rayon = { version = "1.10.0", optional = true }
steamengine-renderer = { version = "0.2.0", path = "../steamengine-renderer" }
thiserror = "2.0.12"
tobj = { version = "4.0.3", optional = true }
tracing = "0.1.41"
wgpu = "25.0.2"

[features]
default = ["camera", "resource-manager"]
camera = ["dep:cgmath"]
prespective-camera = ["camera"]
orthographic-camera = ["camera"]
simple-buffers = []
resource-manager = ["dep:rayon", "dep:hashbrown", "dep:fs_extra"]
texture-resource-manager = ["resource-manager", "dep:image"]
model-resource-manager = ["resource-manager", "dep:tobj"]
depth-textures = []
simple-bindings = []

## texture formats
avif = ["texture-resource-manager", "image/avif"]
bmp = ["texture-resource-manager", "image/bmp"]
dds = ["texture-resource-manager", "image/dds"]
exr = ["texture-resource-manager", "image/exr"]
ff = ["texture-resource-manager", "image/ff"]
gif = ["texture-resource-manager", "image/gif"]
hdr = ["texture-resource-manager", "image/hdr"]
ico = ["texture-resource-manager", "image/ico"]
jpeg = ["texture-resource-manager", "image/jpeg"]
png = ["texture-resource-manager", "image/png"]
pnm = ["texture-resource-manager", "image/pnm"]
qoi = ["texture-resource-manager", "image/qoi"]
tga = ["texture-resource-manager", "image/tga"]
tiff = ["texture-resource-manager", "image/tiff"]
webp = ["texture-resource-manager", "image/webp"]

[dev-dependencies]
anyhow = "1.0.98"
pollster = "0.4.0"
steamengine-communication = { path = "../../backend/steamengine-communication", features = ["tcp"] }
steamengine-persistent = { path = "../../backend/steamengine-persistent", features = ["redis-impl"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winit = "0.30.11"
