[package]
name = "steamengine"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["K3nder <k3nde@outlook.es>"]
description = "A lightweight graphic engine"

[dependencies]
bytemuck = "1.23.0"
log = "0.4.27"
steamengine-wgpu-core = { path = "../steamengine-wgpu-core"}
thiserror = "2.0.12"
